Fix format string warnings

Fixes bug #762006
https://bugzilla.gnome.org/show_bug.cgi?id=762006